# dybuf

./: .gitignore  AGENTS.md  CROSS_LANGUAGE_ALIGNMENT.md  DYPKT_SCHEMA_CONVENTION.md  LICENSE  README.md  TODO.md
.github/workflows/: pypi-release.yml
c/: CMakeLists.txt  README.md  dybuf.h  dypkt.h  main.c
c/fixtures/: generate_fixtures.c  verify_fixtures.c
c/json/: LICENSE  Makefile  cjson.c  cjson.h  cjson_runtime.c  cjson_runtime.h  json.l  json.lex.c  json.tab.c  json.y  json.yacc.c
c/platform/: plat_io.h  plat_mem.h  plat_type.h
fixtures/: README.md
fixtures/v1/: json_values.json  typdex.json  varint_signed.json  varint_unsigned.json  varlen_bytes.json  varlen_strings.json
java/: README.md  dybuf-java.ipr  dybuf-java.iws
java/src/lets/cool/util/: DyBuf.java
java/src/oyo/lol/util/: DyBuf.java
java/src/test/: FixtureTest.java  Main.java
js/: DyBuf.js  README.md  package.json
js/test/: dybuf.json.test.js  dybuf.typdex.test.js  dybuf.varints.test.js  dybuf.varlen.test.js
js/testutils/: ensure-fixtures.js  fixture-utils.js
py/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
py/docs/: conf.py  dybuf_api.rst  index.rst
py/include/dybuf/: plat_type.h
py/src/dybuf/: __init__.py  _core.pxd  _core.pyx  json.py
py/src/dybuf/tests/: __init__.py  fixtures.py  test_fixtures.py  test_json.py  test_roundtrip.py
py/tests/: test_roundtrip.py
tools/: generate_fixtures.sh  test_java_fixtures.sh
